--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,6 @@ hs_err_pid*
 */nbproject/private/*
 
 # build files
-build/*
-dist/*
 *.class
 *.test*.xml
 
@@ -24,4 +22,7 @@ dist/*
 /.gitk-tmp.*
 
 # coverage report
+
 cobertura.ser
+AirportSimulation/build/
+AirportSimulation/dist/
