airplane first steps

--- a/AirportSimulation/nbproject/project.properties
+++ b/AirportSimulation/nbproject/project.properties
@@ -32,7 +32,8 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.Library.classpath}
+    ${libs.Library.classpath}:\
+    ${libs.MyLibrary.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -44,7 +45,8 @@ javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
     ${libs.junit_4.classpath}:\
-    ${libs.TestLibrary.classpath}
+    ${libs.TestLibrary.classpath}:\
+    ${libs.MyTestLibrary.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
