--- a/AirportSimulation/nbproject/project.properties
+++ b/AirportSimulation/nbproject/project.properties
@@ -35,7 +35,7 @@ dist.dir=dist
 dist.jar=${dist.dir}/AirportSimulation.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
-excludes=fitnesse
+excludes=
 file.reference.antlr-4.2-complete.jar=lib\\antlr-4.2-complete.jar
 file.reference.asm-3.0.jar=lib/asm-3.0.jar
 file.reference.asm-tree-3.0.jar=lib/asm-tree-3.0.jar
@@ -45,9 +45,10 @@ file.reference.jakarta-oro-2.0.8.jar=lib/jakarta-oro-2.0.8.jar
 file.reference.javax.json-1.0.jar=lib/javax.json-1.0.jar
 file.reference.json-simple-1.1.1.jar=lib\\json-simple-1.1.1.jar
 file.reference.junit-4.10.jar=lib\\junit-4.10.jar
-file.reference.log4j-1.2.9.jar=lib/log4j-1.2.9.jar
+file.reference.log4j-api-2.3.jar=lib\\log4j-api-2.3.jar
 file.reference.mockito-all-1.9.5-rc1.jar=lib\\mockito-all-1.9.5-rc1.jar
-includes=**/*.java
+file.reference.postgresql-9.4-1202.jdbc4.jar=lib\\postgresql-9.4-1202.jdbc4.jar
+includes=**/*.java **/*.xml
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
@@ -56,15 +57,18 @@ javac.classpath=\
     ${file.reference.asm-tree-3.0.jar}:\
     ${file.reference.cobertura-1.9.4.1.jar}:\
     ${file.reference.jakarta-oro-2.0.8.jar}:\
-    ${file.reference.log4j-1.2.9.jar}:\
     ${file.reference.javax.json-1.0.jar}:\
     ${file.reference.collections-generic-4.01.jar}:\
-    ${file.reference.json-simple-1.1.1.jar}
+    ${file.reference.json-simple-1.1.1.jar}:\
+    ${libs.hibernate4-persistence.classpath}:\
+    ${file.reference.log4j-api-2.3.jar}:\
+    ${file.reference.postgresql-9.4-1202.jdbc4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.processorpath=\
-    ${javac.classpath}
+    ${javac.classpath}:\
+    ${libs.hibernate4-persistence.classpath}
 javac.source=1.7
 javac.target=1.7
 javac.test.classpath=\
@@ -108,11 +112,8 @@ project.license=epl10
 project.licensePath=./licence.txt
 run.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project.
-# You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
-# To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=-Xms2048m -Xmx10240m -noverify
+    ${build.classes.dir}:\
+    ${libs.hibernate4-persistence.classpath}
 run.test.classpath=\
     ${build.instrumented.dir}:\
     ${javac.test.classpath}:\
@@ -120,8 +121,7 @@ run.test.classpath=\
     ${file.reference.asm-3.0.jar}:\
     ${file.reference.asm-tree-3.0.jar}:\
     ${file.reference.cobertura-1.9.4.1.jar}:\
-    ${file.reference.jakarta-oro-2.0.8.jar}:\
-    ${file.reference.log4j-1.2.9.jar}
+    ${file.reference.jakarta-oro-2.0.8.jar}
 source.encoding=UTF-8
 src.acceptance.dir=acceptance
 src.dir=src
